# django-js-routes

./: .coveragerc  .editorconfig  .flake8  .gitignore  .isort.cfg  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
example_project/: .env.json  .eslintrc  Makefile  example_project.db  gulpfile.babel.js  package-lock.json  package.json
example_project/main/presentation/: views.py
example_project/main/public/: urls.py
example_project/main/static/js/: App.js
example_project/main/static/js/controllers/: HomeController.js  index.js
example_project/main/static/js/core/: DOMRouter.js  reverseUrl.js
example_project/main/static/sass/: App.scss
example_project/main/templates/: base.html  home.html
example_project/project/: context_processors.py  urls.py
example_project/project/settings/: base.py  dev.py
js_routes/: __init__.py  apps.py  serializers.py
js_routes/_scripts/: build_static_resolver.py
js_routes/conf/: settings.py
js_routes/management/commands/: dump_routes_resolver.py
js_routes/static/js/routes/: resolver.js
js_routes/templates/js_routes/: routes.html
js_routes/templates/js_routes/_base/: resolver.js  static_resolver.js
js_routes/templates/js_routes/_dump/: default.js  es6.js
js_routes/templatetags/: js_routes_tags.py
js_routes/test/: utils.py
js_routes/utils/: text.py
tests/: settings.py
tests/_testsite/: urls.py
tests/jstests/routes/: resolver-test.js
tests/pytests/: settings.py
tests/pytests/_testsite/: urls.py  views.py
tests/pytests/safeguards/: test_static_resolver.py
tests/pytests/unit/: test_serializers.py
tests/pytests/unit/management/commands/: test_dump_routes_resolver.py
tests/pytests/unit/templatetags/: test_js_routes_tags.py
tests/pytests/unit/utils/: test_text.py
tests/unit/: test_serializers.py
