[flake8]
exclude = build,docs,.tox,.venv,migrations,node_modules
ignore = E731, W504
max-line-length = 100

[isort]
default_section = THIRDPARTY
known_first_party = js_routes
line_length=100
lines_after_imports = 2
not_skip = __init__.py
skip=migrations,node_modules

[metadata]
license-file = LICENSE

[tool:pytest]
django_find_project = false
norecursedirs = build src .tox node_modules
addopts = --ds=tests.pytests.settings --reuse-db
confcutdir = ./tests/
python_paths = ./

[wheel]
universal = 1
